Add richTextStyler class for enhanced text styling functionality
- Implemented richTextStyler class to manage text styling in InlineCssTextArea.
- Added methods for applying bold, italic, and bullet point styles.
- Integrated slider for font size adjustments with real-time updates.
- Enhanced event handling for text changes and style updates.
- Included utility functions for style parsing and application.