@@ -3,57 +3,61 @@ package com.example;
 import java.io.DataOutputStream;
 import java.io.File;
 import java.io.FileOutputStream;
-
 import java.io.IOException;
 
 import javafx.application.Platform;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
-import javafx.geometry.Orientation;
+
 import javafx.scene.Node;
-import javafx.scene.control.Slider;
+
+import javafx.scene.control.ScrollPane;
+
 import javafx.scene.control.TextField;
+
 import javafx.scene.layout.HBox;
-import javafx.scene.layout.VBox;
 import javafx.scene.layout.Priority;
+import javafx.scene.layout.VBox;
 import javafx.stage.Stage;
+
+import org.fxmisc.flowless.VirtualizedScrollPane;
 import org.fxmisc.richtext.InlineCssTextArea;
 import org.fxmisc.richtext.model.Codec;
 import org.fxmisc.richtext.model.ReadOnlyStyledDocument;
 import org.fxmisc.richtext.model.SegmentOps;
 import org.fxmisc.richtext.model.StyledDocument;
-import org.fxmisc.flowless.VirtualizedScrollPane;
-import javafx.scene.control.IndexRange;
 
 public class noteViewController {
 
-    private final String notePath = "src/main/java/com/example/Notes/";
-    private InlineCssTextArea contentArea = new InlineCssTextArea();
-    
-    @FXML private TextField titleField;  
-    @FXML private VBox editorContainer; 
-    @FXML private HBox titleBar;
-    @FXML private VBox mainRoot;
-    @FXML private VBox slider;
+    private final static String notePath = "src/main/java/com/example/Notes/";
+    private static InlineCssTextArea contentArea = new InlineCssTextArea();
 
+    @FXML
+    private TextField titleField;
+    @FXML
+    private VBox editorContainer;
+    @FXML
+    private HBox titleBar;
+    @FXML
+    private VBox mainRoot;
+    @FXML
+    private VBox slider;
     public static String selectedNoteName;
-    private String currentFileName;
-    
-    private Slider slide = new Slider(10, 50, 14); 
-    private boolean isSliderVisible = false;
-    private String currentTextStyle = "-fx-font-family: 'Segoe UI'; -fx-font-size: 14pt; -fx-fill: white;";
+    private static String currentFileName;
+    private String currentTextStyle = "-fx-font-family: 'Segoe UI'; -fx-font-size: 12pt; -fx-fill: white;";
+
+    private boolean internalChange = false;
+    private richTextStyler textStyler;
 
     @FXML
     public void initialize() {
-        //Initalise UI Components
+        textStyler = new richTextStyler(contentArea, slider, noteViewController::saveContent);
         setupRichEditor();
-        setupSliderLogic(); 
 
-        //Check for null
         if (selectedNoteName != null) {
             findAndLoad(selectedNoteName);
         }
-        //Make window
+
         Platform.runLater(() -> {
             if (mainRoot != null) {
                 WindowResizer.makeResizable(mainRoot, titleBar, 400, 500);
@@ -61,158 +65,81 @@ public class noteViewController {
             contentArea.requestFocus();
         });
 
-        contentArea.richChanges().subscribe(change -> {
-            if (currentFileName != null) {
-                saveContent();
-            }
-            
-            if (change.getInserted().length() == 1) {
-                int start = change.getPosition();
-                int end = start + 1;
-                Platform.runLater(() -> {
-                    contentArea.setStyle(start, end, currentTextStyle);
-                });
-            }
-        });
-
-        contentArea.setOnMouseClicked(event -> {
-            int pos = contentArea.getCaretPosition();
-            if (pos > 0) {
-                String sampledStyle = contentArea.getStyleAtPosition(pos - 1);
-                if (sampledStyle != null && !sampledStyle.isEmpty()) {
-                    currentTextStyle = sampledStyle;
-                    syncSliderToStyle(currentTextStyle);
-                }
-            }
-        });
-
-        titleField.focusedProperty().addListener((obs, wasFocused, isFocused) -> {
-            if (!isFocused && currentFileName != null) {
+        titleField.focusedProperty().addListener((obs, was, is) -> {
+            if (!is && currentFileName != null) {
                 renameNoteFile(titleField.getText());
             }
         });
-    }
-    
 
-    private void syncSliderToStyle(String style) {
-        if (style.contains("-fx-font-size:")) {
-            try {
-                String sizeStr = style.split("-fx-font-size: ")[1].split("pt")[0].trim();
-                slide.setValue(Double.parseDouble(sizeStr));
-            } catch (Exception e) {}
-        }
     }
 
     private void setupRichEditor() {
         VirtualizedScrollPane<InlineCssTextArea> vsPane = new VirtualizedScrollPane<>(contentArea);
+
+        contentArea.setWrapText(true);
+        vsPane.setHbarPolicy(ScrollPane.ScrollBarPolicy.NEVER);
+        vsPane.setVbarPolicy(ScrollPane.ScrollBarPolicy.AS_NEEDED);
+
         VBox.setVgrow(vsPane, Priority.ALWAYS);
         editorContainer.getChildren().add(vsPane);
+
         contentArea.setFocusTraversable(true);
-        contentArea.setStyle("-fx-font-family: 'Segoe UI'; -fx-font-size: 14pt; -fx-fill: white;");
-    }
-
-    private void setupSliderLogic() {
-        slide.setOrientation(Orientation.HORIZONTAL);
-        slide.setShowTickLabels(true);
-        slide.setFocusTraversable(false);
-
-        slide.valueProperty().addListener((obs, oldVal, newVal) -> {
-            String newSize = "-fx-font-size: " + newVal.intValue() + "pt;";
-            currentTextStyle = currentTextStyle.replaceAll("-fx-font-size: \\d+pt;", "").trim() + " " + newSize;
-
-            IndexRange selection = contentArea.getSelection();
-            if (selection.getLength() > 0) {
-                contentArea.setStyle(selection.getStart(), selection.getEnd(), currentTextStyle);
-            }
-            contentArea.requestFocus();
-        });
-    }
-
-    @FXML
-    public void handleSlider(ActionEvent event) {
-        if (isSliderVisible) {
-            slider.getChildren().clear();
-            isSliderVisible = false;
-        } else {
-            if (!slider.getChildren().contains(slide)) {
-                slider.getChildren().add(slide);
-            }
-            isSliderVisible = true;
-        }
-        contentArea.requestFocus();
-    }
-
-    @FXML
-    private void handleBold() {
-        if (currentTextStyle.contains("-fx-font-weight: bold")) {
-            currentTextStyle = currentTextStyle.replace("-fx-font-weight: bold;", "").trim();
-        } else {
-            currentTextStyle += " -fx-font-weight: bold;";
-        }
-        //selection index i.e highlight
-        IndexRange selection = contentArea.getSelection();
-        if (selection.getLength() > 0) {
-            contentArea.setStyle(selection.getStart(), selection.getEnd(), currentTextStyle);
-            saveContent();
-        }
-        contentArea.requestFocus();
+        contentArea.setStyle(currentTextStyle);
     }
 
     public void findAndLoad(String noteToFind) {
-    File file = new File(notePath, noteToFind);
-    if (file.exists() && file.length() > 0) {
+        File file = new File(notePath, noteToFind);
         currentFileName = noteToFind;
+        titleField.setText(noteToFind);
 
-        try (java.io.DataInputStream dis = new java.io.DataInputStream(new java.io.FileInputStream(file))) {
-            Codec<StyledDocument<String, String, String>> codec = ReadOnlyStyledDocument.codec(
-                Codec.STRING_CODEC,
-                Codec.styledTextCodec(Codec.STRING_CODEC),
-                SegmentOps.styledTextOps()
-            );
-            //Decode
-            StyledDocument<String, String, String> doc = codec.decode(dis);
-            titleField.setText(noteToFind);
+        if (file.exists() && file.length() > 0) {
+            try (java.io.DataInputStream dis = new java.io.DataInputStream(new java.io.FileInputStream(file))) {
 
-       
-            contentArea.replace(0, contentArea.getLength(), doc);
+                Codec<StyledDocument<String, String, String>> codec = ReadOnlyStyledDocument.codec(
+                        Codec.STRING_CODEC,
+                        Codec.styledTextCodec(Codec.STRING_CODEC),
+                        SegmentOps.styledTextOps());
 
-        
-            if (contentArea.getLength() > 0) {
-                currentTextStyle = contentArea.getStyleAtPosition(0);
-                syncSliderToStyle(currentTextStyle);
+                StyledDocument<String, String, String> doc = codec.decode(dis);
+
+                internalChange = true;
+                contentArea.replace(0, contentArea.getLength(), doc);
+                internalChange = false;
+
+            } catch (IOException e) {
+                contentArea.replaceText("");
             }
-        } catch (IOException e) {
-            System.err.println("Error decoding rich text " + e.getMessage());
+        } else {
             contentArea.replaceText("");
         }
-    }else{
-        titleField.setText(noteToFind);
-        contentArea.replaceText("");
+
+        Platform.runLater(() -> contentArea.requestFocus());
     }
-}
-    //Save explicitly with codec for stlying using DataStream
-    private void saveContent() {
-        if (currentFileName == null) return; 
-            File file = new File(notePath, currentFileName);
 
-        Codec<StyledDocument<String, String, String>>codec =
-         ReadOnlyStyledDocument.codec(
-            Codec.STRING_CODEC,
-            Codec.styledTextCodec(Codec.STRING_CODEC),
-            SegmentOps.styledTextOps()
-        );
+    private static void saveContent() {
 
-        try (DataOutputStream dos = new DataOutputStream(new FileOutputStream(file))){
+        File file = new File(notePath, currentFileName);
+
+        Codec<StyledDocument<String, String, String>> codec = ReadOnlyStyledDocument.codec(
+                Codec.STRING_CODEC,
+                Codec.styledTextCodec(Codec.STRING_CODEC),
+                SegmentOps.styledTextOps());
+
+        try (DataOutputStream dos = new DataOutputStream(new FileOutputStream(file))) {
             codec.encode(dos, contentArea.getDocument());
         } catch (IOException e) {
-           e.printStackTrace();
+            e.printStackTrace();
         }
     }
-    //Renaming for title
+
     private void renameNoteFile(String newTitle) {
-        if (newTitle == null || newTitle.trim().isEmpty() || newTitle.equals(currentFileName)) return;
+        if (newTitle == null || newTitle.isBlank() ||
+                newTitle.equals(currentFileName))
+            return;
+
         File oldFile = new File(notePath, currentFileName);
         File newFile = new File(notePath, newTitle);
+
         if (oldFile.renameTo(newFile)) {
             currentFileName = newTitle;
             selectedNoteName = newTitle;
@@ -220,15 +147,37 @@ public class noteViewController {
     }
 
     @FXML
+    public void handleBold(ActionEvent event) {
+        textStyler.applyBold();
+        saveContent();
+    }
+
+    @FXML
+    public void handleSlider(ActionEvent event) {
+        textStyler.applySlider();
+        saveContent();
+    }
+
+    @FXML
+    public void handleBulletPoint(ActionEvent event) {
+        textStyler.applyBulletPoint();
+        saveContent();
+    }
+
+    @FXML
+    public void handleItalic(ActionEvent event) {
+        textStyler.applyItalic();
+        saveContent();
+    }
+
+    @FXML
     private void closeWindow(ActionEvent event) {
-        Stage stage = (Stage) ((Node) event.getSource()).getScene().getWindow();
-        stage.close();
+        ((Stage) ((Node) event.getSource()).getScene().getWindow()).close();
     }
 
     @FXML
     private void minimizeWindow(ActionEvent event) {
-        Stage stage = (Stage) ((Node) event.getSource()).getScene().getWindow();
-        stage.setIconified(true);
+        ((Stage) ((Node) event.getSource()).getScene().getWindow()).setIconified(true);
     }
 
     @FXML
